# grdl-te

./: .gitignore  BENCHMARK_COVERAGE_GAPS.md  BENCHMARK_REMAINING_PHASES.md  CLAUDE.md  LICENSE  README.md  TASK_PRIORITY.md  benchmark_examples.py  conftest.py  coverage_summary.py  pyproject.toml  pytest.ini  report_possibilities.md  stress_testing_example.py
.github/workflows/: publish.yml
coverage/: summary.py
data/: README.md
data/aster/: README.md
data/biomass/: README.md
data/cphd/: README.md
data/crsd/: README.md
data/dem/: README.md
data/dted/: README.md
data/eo_nitf/: README.md
data/geoid/: README.md
data/landsat/: README.md
data/nisar/: README.md
data/sentinel1/: README.md
data/sentinel2/: README.md
data/sidd/: README.md
data/terrasar/: README.md
data/umbra/: README.md
data/viirs/: README.md
docs/: benchmarking-guide.md
grdl_te/: __init__.py  __main__.py
grdl_te/benchmarking/: __init__.py  _aggregation.py  _formatting.py  active.py  base.py  comparison.py  component.py  forensic.py  models.py  passive.py  report.py  report_engine.py  report_gui.py  report_md.py  source.py  store.py  stress_base.py  stress_gui.py  stress_models.py  stress_report.py  stress_runner.py  stress_store.py  suite.py  topology.py  unified_store.py
tests/: conftest.py  test_active_runner.py  test_benchmark_models.py  test_benchmark_store.py  test_component_benchmark.py  test_geolocation_affine_real.py  test_geolocation_base.py  test_geolocation_elevation.py  test_geolocation_utils.py  test_io_geotiff.py  test_io_hdf5.py  test_io_jpeg2000.py  test_io_nitf.py
tests/benchmarking/: test_active_runner.py  test_benchmark_models.py  test_benchmark_report.py  test_benchmark_source.py  test_benchmark_store.py  test_comparison.py  test_integration.py  test_passive_runner.py  test_report_engine.py  test_report_md.py  test_stress_models.py  test_stress_report.py  test_stress_runner.py  test_topology.py  test_unified_store.py
tests/validation/: conftest.py  test_accelerated_resampling.py  test_coordinate_utils.py  test_coregistration_affine.py  test_coregistration_feature_match.py  test_coregistration_projective.py  test_data_prep.py  test_decomposition_halpha.py  test_decomposition_pauli.py  test_detection_cfar.py  test_detection_models.py  test_discovery.py  test_elevation_models.py  test_elevation_tiled_geotiff.py  test_enu_grid.py  test_filters.py  test_geolocation_affine_real.py  test_geolocation_base.py  test_geolocation_chip.py  test_geolocation_elevation.py  test_geolocation_nisar.py  test_geolocation_rpc_rsm.py  test_geolocation_sentinel1.py  test_geolocation_sicd.py  test_geolocation_sidd.py  test_gpu_cfar.py  test_gpu_filters.py  test_gpu_image_formation.py  test_gpu_verification.py  test_intensity.py  test_interpolation.py  test_io_aster.py  test_io_biomass.py  test_io_cphd.py  test_io_crsd.py  test_io_eo_nitf.py  test_io_geotiff.py  test_io_hdf5.py  test_io_jpeg2000.py  test_io_nisar.py  (+17 more)
workflows/: comprehensive_benchmark_workflow.yaml
