[project]
name = "grdl-te"
version = "0.1.0"
description = "Testing and Evaluation suite for GRDL library using real-world data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Duane Smalley", email = "duane.d.smalley@gmail.com"},
    {name = "Steven Siebert"},
]

dependencies = [
    "grdl",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.21",
    "h5py>=3.0",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",  # parallel test execution
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=tests",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_data: marks tests that require real data files",
    "integration: marks Level 3 integration tests (ChipExtractor, Normalizer, Tiler workflows)",
    "landsat: Landsat 8/9 tests (GeoTIFFReader)",
    "viirs: VIIRS VNP09GA tests (HDF5Reader)",
    "sentinel2: Sentinel-2 tests (JP2Reader)",
    "nitf: Umbra SICD tests (NITFReader)",
]

[tool.coverage.run]
source = ["tests"]
omit = ["*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
