[project]
name = "grdl-te"
version = "0.1.0"
description = "Testing and Evaluation suite for GRDL library using real-world data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Steven Siebert"},
    {name = "Ava Courtney"},
]

dependencies = [
    "grdl",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.21",
    "h5py>=3.0",
    "rasterio>=1.3",
]

[project.optional-dependencies]
benchmarking = [
    "grdl-runtime",
]
dev = [
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",  # parallel test execution
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/validation", "tests/benchmarking"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=grdl",
    "--cov-report=json:.coverage.tmp.json",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_data: marks tests that require real data files",
    "integration: marks Level 3 integration tests (ChipExtractor, Normalizer, Tiler workflows)",
    "landsat: Landsat 8/9 tests (GeoTIFFReader)",
    "viirs: VIIRS VNP09GA tests (HDF5Reader)",
    "sentinel2: Sentinel-2 tests (JP2Reader)",
    "nitf: Umbra SICD tests (NITFReader)",
    "geolocation: Geolocation utility and coordinate transform tests",
    "benchmark: Performance benchmark tests",
    "cfar: CFAR detector tests",
    "detection: Detection model tests",
    "decomposition: Polarimetric decomposition tests",
    "sar: SAR-specific processing tests",
    "image_formation: SAR image formation tests",
    "ortho: Orthorectification tests",
    "coregistration: CoRegistration tests",
    "cphd: CPHD format tests",
    "crsd: CRSD format tests",
    "sidd: SIDD format tests",
    "sentinel1: Sentinel-1 SLC tests",
    "aster: ASTER L1T tests",
    "biomass: BIOMASS L1 tests",
    "elevation: Elevation model tests",
    "terrasar: TerraSAR-X/TanDEM-X tests",
    "interpolation: Interpolation algorithm tests",
    "filters: Spatial image filter tests",
    "intensity: Intensity transform tests",
    "pipeline: Pipeline composition tests",
    "data_prep: Data preparation tests (ChipExtractor, Tiler, Normalizer)",
]

[tool.setuptools.packages.find]
include = ["grdl_te*"]

[tool.coverage.run]
source = ["grdl"]
omit = [
    "*/test_*.py",
    "*/_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
